<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:background="#F1EDED">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/coverIv"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:background="@color/black">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="120dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatarIv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:background="@color/black"
                android:contentDescription="@string/profile_pic"
                android:src="@drawable/default_profile_pic_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#77000000"
                >

                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/emailTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:text="@string/emailHint"/>
                <TextView
                    android:id="@+id/phoneTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:text="@string/phone"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:src="@drawable/edit_icc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/edit_button" />

</RelativeLayout>